<resources>
    <string name="app_name">Proyecto Sesion 1</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    //Nombre del producto
    <string name="textMac">MacBook Pro 17\"</string>
    <string name="textAlien">AlienWare</string>
    <string name="textLanix">Lanix</string>

    //Tienda
    <string name="textBestBuy">BestBuy</string>
    <string name="textOffice">Office Depot</string>
    <string name="textCostco">Costco</string>

    //Direccion
    <string name="textLocationMac">Zapopan, Jalisco</string>
    <string name="textLocationAlien">Guadalajara, Jalisco</string>
    <string name="textLocationLanix">Tlaquepaque, Jalisco</string>

    //Teléfono
    <string name="textPhoneMac">3312345678</string>
    <string name="textPhoneAlien">3338068798</string>
    <string name="textPhoneLanix">3311515068</string>

    //Descripcion
    <string name="textDescriptionMac">This is great like you</string>
    <string name="textDescriptionAlien">The power for your</string>
    <string name="textDescriptionLanix">Just for intelligent people</string>

    <string name="title">Título</string>
    <string name="store">Tienda</string>
    <string name="location">Localización</string>
    <string name="phone">Teléfono</string>


    <string name="textSee">SEE MORE</string>
    <string name="textShare">SHARE</string>


    <string name="btnSave">Save</string>
    <string name="btnCancel">Cancel</string>


    <string name="textSplash">¡Bienvenido, amigo! a Productos ITESO</string>
    <string name="btnLogin">Entrar</string>
    <string name="textPass">Contraseña</string>
    <string name="textLoginUser">Usuario</string>
    <string name="textLoginPass">LogOut</string>
    <string name="textPrivacy">Aviso de privacidad</string>
    <string name="textLogout">LogOut</string>
    <string name="image">Image</string>
    <string name="guardar">GUARDAR</string>
    <string name="category">Category</string>


    <string name="nav0">Technology</string>
    <string name="nav1">Home</string>
    <string name="nav2">Electronics</string>


    <string-array name="images">
        <item>"Mac"</item>
        <item>"Alienware"</item>
        <item>"Lanix"</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
